<resources>
    <string name="app_name" translatable="false">MedicBuddy</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_my_pharmacy">My Pharmacy</string>
    <string name="text_home_today">Today</string>
    <string name="text_home_hourExample" translatable="false">19:06</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="menu_my_reminders">My Reminders</string>
    <string name="fragment_my_pharmacy_lbl_medicines">Medicine Stock</string>
    <string name="fragment_my_pharmacy_button_add_medicines">Add New Medicine</string>
    <string name="activity_form_add_medicine_to_stock_lbl_name">Name</string>
    <string name="activity_form_add_medicine_to_stock_lbl_quantity_stock">Quantity</string>
    <string name="activity_form_add_medicine_to_stock_lbl_expiration_date">Expiration Date</string>
    <string name="activity_form_add_medicine_to_stock_lbl_medicine_type">Type</string>
    <string name="activity_form_add_medicine_to_stock_lbl_administration_type">Administration Type</string>
    <string name="activity_form_add_medicine_scheduling_lbl_name">Name</string>
    <string name="activity_form_add_medicine_scheduling_lbl_dose">Dose</string>
    <string name="activity_form_add_medicine_scheduling_lbl_dose_unit">Dose Unit</string>
    <string name="activity_form_add_medicine_scheduling_lbl_start_date">Start Date</string>
    <string name="activity_form_add_medicine_scheduling_lbl_frequency">Frequency (in hours):</string>
    <string name="activity_form_add_medicine_scheduling_lbl_first_dose_hour">First Hour Dose</string>
    <string name="activity_form_add_medicine_to_stock_lbl_unit_stock">Unit Type</string>
    <string-array name="languages">
        <item>Portuguese</item>
        <item>English</item>
    </string-array>
    <string-array name="dose_units">
        <item>Pill(s)</item>
        <item>Tablet(s)</item>
        <item>mL</item>
        <item>Drop(s)</item>
        <item>Injection(s)</item>
    </string-array>
    <string-array name="medicine_types">
        <item>Reference</item>
        <item>Generic</item>
        <item>Similar</item>
        <item>Manipulated</item>
    </string-array>
    <string-array name="administration_types">
        <item>Oral</item>
        <item>Topical</item>
        <item>Injection</item>
        <item>Inhalation</item>
        <item>Other</item>
    </string-array>
    <string-array name="frequencies">
        <item>Every 4 hours</item>
        <item>Every 6 hours</item>
        <item>Every 8 hours</item>
        <item>Every 12 hours</item>
        <item>Every 24 hours</item>
    </string-array>
    <string name="choose_language">Choose app language</string>
    <string name="settings_chance_language">Change language</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_medicine">Do you really want to delete this medication?</string>
    <string name="medicament_name">Medicament name</string>
    <string name="fill_in_all_required_fields">Fill in all required fields!</string>
    <string name="error_save_scheduling_try_again">Error saving schedule. Please try again.</string>
    <string name="no_medicines_found">No medicines found</string>
    <string name="error_save_medicine_try_again">Error saving medication. Please try again.</string>
    <string name="confirm_delete_scheduling">Do you really want to delete this schedule?</string>
    <string name="reminder">Reminder</string>
    <string name="time_to_take_medicine">Time to take the medicine: %1$s</string>
    <string name="notification_medicine_reminder_title">Medicine Reminder</string>
    <string name="notification_medicine_reminder_text">Time: %1$s | Take: %2$s of %3$s</string>
    <string name="notification_medicine_reminder_action">View</string>
    <string name="notification_medicine_reminder_channel">Reminders</string>
    <string name="notification_medicine_reminder_channel_desc">Notifications for scheduled medicine reminders</string>
    <string name="error_alarm_past_time">The scheduled date/time must be in the future.</string>
    <string name="error_alarm_exact_permission">Permission for exact alarms not granted. Enable it in settings.</string>
    <string name="scheduling_channel_name">Schedulings</string>
    <string name="scheduling_channel_description">Medication schedulings notifications</string>
    <string name="new_medicine_scheduling">New Medicine Scheduling</string>
    <string name="new_medicine">New Medicine</string>
    <string name="btn_save">Save</string>
    <string name="show_future_schedulings">Upcoming</string>
    <string name="show_today_schedulings">Today</string>
    <string name="take_photo">Take a photo</string>
    <string name="medicine_photo">Photo of the medicament</string>
    <string name="activity_form_add_medicine_to_stock_lbl_photo">Add a medicine picture</string>
    <string name="mark_as_done">Mark as completed</string>
    <string name="need_to_buy_medicine">It is necessary to buy the medicine again.</string>
    <string name="cannot_complete_no_stock">Cannot complete: insufficient stock.</string>
    <string name="edit_medicine">Edit Medicine</string>
    <string name="end_of_treatment">End of treatment:</string>
    <string name="ex_duration_of_treatment">E.g: 7</string>
    <string name="duration_of_treatment">Duration of treatment (days):</string>
    <string name="invalid_frequency">Enter a valid frequency in hours (integer &gt; 0)</string>
</resources>