<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:background="@color/cardBackground">

    <ImageView
        android:id="@+id/item_medicine_photo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        android:background="@drawable/edit_text_background"
        android:contentDescription="@string/medicine_photo"
        android:layout_marginEnd="12dp"/>

    <TextView
        android:id="@+id/item_medicine_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/medicament_name"
        android:textSize="16sp"
        android:textColor="@color/primaryText" />

    <ImageButton
        android:id="@+id/item_medicine_edit"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_edit"
        android:contentDescription="@string/edit"
        android:layout_marginEnd="8dp"/>

    <ImageButton
        android:id="@+id/item_medicine_delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/delete"
        app:tint="@color/error" />
</LinearLayout>
