<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        app:titleTextColor="@color/onPrimary"
        app:popupTheme="@style/Theme.MedicBuddy.PopupOverlay" />

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@color/cardBackground"
            android:backgroundTint="@color/cardBackground"
            android:clipToPadding="false"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- TextView apenas para espaçamento -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Nome -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_form_add_medicine_scheduling_lbl_name"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="8dp">

                <Spinner
                    android:id="@+id/activity_medicine_scheduling_medicine_name"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:backgroundTint="@color/primary" />
            </RelativeLayout>

            <!-- Dose -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_form_add_medicine_scheduling_lbl_dose"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText" />

            <EditText
                android:id="@+id/activity_medicine_scheduling_medicine_dose"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="1"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/primary2" />

            <!-- Unidade da Dose -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_form_add_medicine_scheduling_lbl_dose_unit"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:padding="8dp">

                <Spinner
                    android:id="@+id/activity_medicine_scheduling_medicine_dose_unit"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:backgroundTint="@color/primary" />
            </RelativeLayout>

            <!-- Data de Início -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_form_add_medicine_scheduling_lbl_start_date"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText" />

            <EditText
                android:id="@+id/activity_medicine_scheduling_medicine_start_date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="26/05/2025"
                android:background="@drawable/edit_text_background"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:padding="12dp"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/primary2" />

            <!-- Frequência -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_form_add_medicine_scheduling_lbl_frequency"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText" />

            <EditText
                android:id="@+id/activity_medicine_scheduling_medicine_frequency"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="Ex: 8"
                android:inputType="number"
                android:padding="12dp"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/primary2" />

            <!-- Hora da Primeira Dose -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_form_add_medicine_scheduling_lbl_first_dose_hour"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText" />

            <EditText
                android:id="@+id/activity_medicine_scheduling_medicine_first_dose_hour"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="08:00"
                android:background="@drawable/edit_text_background"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:padding="12dp"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/primary2" />

            <!-- Duração do Tratamento -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration_of_treatment"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText" />

            <EditText
                android:id="@+id/activity_medicine_scheduling_duration_days"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/ex_duration_of_treatment"
                android:inputType="number"
                android:padding="12dp"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:backgroundTint="@color/primary2" />

            <!-- Fim do Tratamento -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_of_treatment"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/primaryText" />

            <EditText
                android:id="@+id/activity_medicine_scheduling_end_datetime"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_text_background"
                android:hint="--/--/---- --:--"
                android:padding="12dp"
                android:textSize="15sp"
                android:textColor="@color/primaryText"
                android:focusable="false"
                android:textIsSelectable="false"
                android:clickable="false"
                android:inputType="none"
                android:backgroundTint="@color/primary2" />

            <!-- Botão -->
            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/primary"
                android:text="@string/btn_save"
                android:textAllCaps="false"
                android:textColor="@color/onPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>