<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/activity_form_add_medicine_to_stock_lbl_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_form_add_medicine_to_stock_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Paracetamol"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_form_add_medicine_to_stock_lbl_concentration"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/activity_form_add_medicine_to_stock_concentration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="1"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/activity_form_add_medicine_to_stock_concentration_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/activity_form_add_medicine_to_stock_lbl_expiration_date"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_form_add_medicine_to_stock_expiration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="26/05/2025"
            android:inputType="date" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/activity_form_add_medicine_to_stock_lbl_medicine_type"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/activity_form_add_medicine_to_stock_medicine_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/activity_form_add_medicine_to_stock_lbl_administration_type"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/activity_form_add_medicine_to_stock_administration_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="Save" />
    </LinearLayout>
</ScrollView>
